--- a/languages/sh/jq/jq.org
+++ b/languages/sh/jq/jq.org
@@ -1,5 +1,5 @@
 #+TITLE: JQ
-#+AUTHOR: azimut
+#+OPTIONS: ^:nil
 
 |--------------+---------------------------------------------------------|
 | wiki         | https://en.wikipedia.org/wiki/Jq_(programming_language) |
