--- a/scm/git/self.org
+++ b/scm/git/self.org
@@ -114,6 +114,8 @@ info/exclude
 |              | --oneline                    | aka --pretty=oneline --abbrev-commit                     |
 |              | --format=raw                 |                                                          |
 |--------------+------------------------------+----------------------------------------------------------|
+| ls-files     |                              | list all files                                           |
+|--------------+------------------------------+----------------------------------------------------------|
 | merge        | BRANCH                       |                                                          |
 |              | --abort                      |                                                          |
 |              | --continue                   |                                                          |
