add DATE to articles

--- a/languages/sh/awk/awk.org
+++ b/languages/sh/awk/awk.org
@@ -1,4 +1,5 @@
 #+TITLE: AWK
+#+DATE: <2023-09-04 lun>
 #+OPTIONS: ^:nil
 |-----------+-------------------------------------------------------------------------------|
 |           | url                                                                           |
