--- a/languages/sh/bc.org
+++ b/languages/sh/bc.org
@@ -1,4 +1,5 @@
 #+TITLE: bc
+#+DATE: <2024-04-12 vie>
 #+OPTIONS: ^:nil
 |------------+--------------------------------------------------------------------|
 | man gnu    | https://www.gnu.org/software/bc/manual/html_mono/bc.html           |
