--- a/languages/sh/bc.org
+++ b/languages/sh/bc.org
@@ -1,4 +1,4 @@
-#+TITLE: bc
+#+TITLE: bc's reference
 #+DATE: <2024-04-12 vie>
 #+OPTIONS: ^:nil
 |------------+--------------------------------------------------------------------|
