--- a/languages/sh/sed/self.org
+++ b/languages/sh/sed/self.org
@@ -1,4 +1,4 @@
-#+TITLE: sed
+#+TITLE: sed's reference
 #+DATE: <2023-09-04 lun>
 #+OPTIONS: ^:nil
 |------------+--------------------------------------------------|
